Now depends on BH

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What Licence is it under ?
+Depends: BH 
 Imports: Rcpp (>= 0.11.2)
-LinkingTo: Rcpp
+LinkingTo: Rcpp, BH
 Suggests: testthat
