--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
 License: What Licence is it under ?
-Depends: BH 
+Depends: BH, RcppParallel
 Imports: Rcpp (>= 0.11.2)
-LinkingTo: Rcpp, BH
+LinkingTo: Rcpp, BH, RcppParallel
 Suggests: testthat
