--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ Date: 2014-10-10
 Author:
 	Lam S.T. Ho [aut, cre],
 	Marc A. Suchard [aut],
-	Forrest W. Crawford [aut]
+	Forrest W. Crawford [aut],
+  Jason Xu [ctb],
+  Vladimir N. Minin [ctb]
 Maintainer: Lam S.T. Ho <lamho86@gmail.com>
 Description: A package for exact inference of multivariate birth-death processes.
 License: Apache License 2
