--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,19 +3,22 @@ Type: Package
 Title: Exact inference of multivariate birth-death processes.
 Version: 0.1
 Date: 2014-10-10
-Author:
-	Lam S.T. Ho [aut, cre],
-	Marc A. Suchard [aut],
-	Forrest W. Crawford [aut],
-  Jason Xu [ctb],
-  Vladimir N. Minin [ctb]
+Author: Lam S.T. Ho [aut, cre],
+    Marc A. Suchard [aut],
+    Forrest W. Crawford [aut],
+    Jason Xu [ctb],
+    Vladimir N. Minin [ctb]
 Maintainer: Lam S.T. Ho <lamho86@gmail.com>
-Description: A package for exact inference of multivariate birth-death processes.
+Description: A package for exact inference of multivariate birth-death
+    processes.
 License: Apache License 2
-Depends: R (>= 3.1.0)
-Imports: 
-  Rcpp (>= 0.11.2),
-  BH,
-  RcppParallel
+Depends:
+    R (>= 3.1.0)
+Imports:
+    Rcpp (>= 0.11.2),
+    BH,
+    RcppParallel
 LinkingTo: Rcpp, BH, RcppParallel
-Suggests: testthat
+Suggests:
+    testthat
+RoxygenNote: 5.0.0
