--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MultiBD
 Type: Package
-Title: Exact inference of multivariate birth-death processes.
+Title: Multivariate birth-death processes
 Version: 0.1
 Date: 2014-10-10
 Author: Lam S.T. Ho [aut, cre],
@@ -11,7 +11,7 @@ Author: Lam S.T. Ho [aut, cre],
 Maintainer: Lam S.T. Ho <lamho86@gmail.com>
 Description: A package for exact inference of multivariate birth-death
     processes.
-License: Apache License 2
+License: Apache License 2.0
 Depends:
     R (>= 3.1.0)
 Imports:
