--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ before_script:
 
 # Build and check package
 script:
+  - gcc -dM -E - < /dev/null
   - R CMD build .
   - _R_CHECK_CRAN_INCOMING_=FALSE R CMD check "${PKG_TARBALL}" --as-cran
   - cat ${PKG_NAME}.Rcheck/00install.out # Print out install / compile log 
