--- a/.travis.yml
+++ b/.travis.yml
@@ -49,8 +49,8 @@ before_script:
 
 # Build and check package
 script:
-  - R CMD build .
-  - _R_CHECK_CRAN_INCOMING_=FALSE R CMD check "${PKG_TARBALL}" --as-cran
+  - R CMD build . --no-build-vignettes
+  - _R_CHECK_CRAN_INCOMING_=FALSE R CMD check "${PKG_TARBALL}" --as-cran --no-build-vignettes
   - cat ${PKG_NAME}.Rcheck/00install.out # Print out install / compile log 
 
 after_success:
