--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,8 @@ Suggests:
     testthat,
     knitr,
     rmarkdown,
+    MCMCpack,
+    ggplot2,
     matrixStats,
     plotrix
 RoxygenNote: 5.0.1
