fix cached bioc packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ install:
   - Rscript -e "if (!require('testthat')) install.packages('testthat')"  
   - Rscript -e "if (!require('matrixStats')) install.packages('matrixStats')"
   - Rscript -e "if (!require('ggplot2')) install.packages('ggplot2')"
-  - Rscript -e "if (!require('graph')) source('http://bioconductor.org/biocLite.R'); biocLite('graph')"
-  - Rscript -e "if (!require('Rgraphviz')) source('http://bioconductor.org/biocLite.R'); biocLite('Rgraphviz')"  
+  - Rscript -e "if (!require('graph')) { source('http://bioconductor.org/biocLite.R'); biocLite('graph') }"
+  - Rscript -e "if (!require('Rgraphviz')) { source('http://bioconductor.org/biocLite.R'); biocLite('Rgraphviz') }"  
   - Rscript -e "if (!require('MCMCpack')) install.packages('MCMCpack')"  
   - Rscript -e "if (!require('plotrix')) install.packages('plotrix')" 
   
