--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MultiBD
 Type: Package
-Title: Multivariate birth-death processes
+Title: Multivariate Birth-Death Processes
 Version: 0.2
 Date: 2016-03-07
 Author: Lam S.T. Ho [aut, cre],
@@ -8,9 +8,12 @@ Author: Lam S.T. Ho [aut, cre],
     Forrest W. Crawford [aut],
     Jason Xu [ctb],
     Vladimir N. Minin [ctb]
-Maintainer: Lam S.T. Ho <lamho86@gmail.com>
-Description: A package for exact inference of multivariate birth-death
-    processes.
+Maintainer: Marc A. Suchard <msuchard@ucla.edu>
+Description: Computationally efficient functions to provide direct likelihood-based
+    inference for partially-observed multivariate birth-death processes.  Such processes
+    range from a simple Yule model to the complex susceptible-infectious-removed model 
+    in disease dynamics.  Efficient likelihood evaluation facilitates maximum likelihood 
+    estimation and Bayesian inference.
 License: Apache License 2.0
 Depends:
     R (>= 3.1.0)
