--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 src/*.o
 src/*.so
 src/*.dll
+src/symbols.rds
 vignettes/*.pdf
 vignettes/*.tex
 vignettes/*.log
@@ -11,3 +12,4 @@ vignettes/*.md
 vignettes/cache
 vignettes/figure
 vignettes/\.build\.timestamp
+vignettes/*.synctex.gz
