--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,8 +4,7 @@
 cran-comments.md
 vignettes/*.pdf
 vignettes/*.tex
-vignettes/SIR-MCMC.log
-vignettes/out.log
+vignettes/*.log
 vignettes/\.build\.timestamp
 vignettes/cache
 vignettes/figure
