--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,6 @@ export(SIR_prob)
 export(bbd_prob)
 export(dbd_prob)
 import(BH)
-import(Rcpp)
-import(RcppParallel)
+importFrom(Rcpp,evalCpp)
+importFrom(RcppParallel,RcppParallelLibs)
 useDynLib(MultiBD)
