--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ install:
   - wget -q -O - https://github.com/yihui/crandalf/raw/master/inst/scripts/install-pandoc | bash
   - PATH=$HOME/texlive/bin/x86_64-linux:$PATH
   # Install R packages
-  - Rscript -e "if (!require('devtools')) install.packages('devtools')"
+  - Rscript -e "if (!require('devtools')) install.packages('devtools', repos = "http://cran.rstudio.com")"
   - Rscript -e "if (!require('covr')) devtools::install_github('jimhester/covr')"
   - Rscript -e "if (!require('rmarkdown')) install.packages('rmarkdown')"
   - Rscript -e "if (!require('knitr')) install.packages('knitr')"
