--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: false
 addons:
   apt:
     sources:
-    - r-packages-precise
+    - r-packages-trusty
     packages:
     - r-base-dev
     - r-recommended
@@ -18,7 +18,6 @@ cache:
     - ~/Rlib     # R libraries
     - ~/texlive  # LaTex
     - ~/bin      # pandoc
-  packages: true
 
 # install dependencies
 install:
@@ -34,7 +33,7 @@ install:
   - wget -q -O - https://github.com/yihui/crandalf/raw/master/inst/scripts/install-pandoc | bash
   - PATH=$HOME/texlive/bin/x86_64-linux:$PATH
   # Install R packages
-  - Rscript -e "if (!require('devtools')) install.packages('devtools', repos = "http://cran.rstudio.com")"
+  - Rscript -e "if (!require('devtools')) install.packages('devtools')"
   - Rscript -e "if (!require('covr')) devtools::install_github('jimhester/covr')"
   - Rscript -e "if (!require('rmarkdown')) install.packages('rmarkdown')"
   - Rscript -e "if (!require('knitr')) install.packages('knitr')"
