--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 # Use container-based Travis with caching
 
-languague: r
+languague: c
 sudo: false
-
-before_install:
-  - tlmgr install index
 
 addons:
   apt:
