try to fix Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ cache:
     - ~/texlive  # LaTex
     - ~/bin      # pandoc
 
-before_install: sudo texconfig rehash
+before_install:
+    - sudo texconfig rehash
 
 # install dependencies
 install:
