--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
-Package: MultiBD
+Package: MultiBDPureBirth2
 Type: Package
-Title: Multivariate Birth-Death Processes
+Title: Multivariate Birth-Death Processes and one pure birth  process
 Version: 0.2.1
-Date: 2018-03-19
+Date: 2021-09-11
 Author: Lam S.T. Ho [aut, cre],
     Marc A. Suchard [aut],
     Forrest W. Crawford [aut],
